api/s2n.h


#define S2N_SUCCESS 0
#define S2N_FAILURE -1
struct s2n_config;
struct s2n_connection;
S2N_API extern struct s2n_config *s2n_config_new(void);
S2N_API extern struct s2n_config *s2n_config_new_minimal(void);
struct s2n_cert_chain_and_key;
S2N_API extern int s2n_config_add_cert_chain_and_key_to_store(struct s2n_config *config, struct s2n_cert_chain_and_key *cert_key_pair);
S2N_API extern int s2n_config_set_cert_chain_and_key_defaults(struct s2n_config *config,
        struct s2n_cert_chain_and_key **cert_key_pairs, uint32_t num_cert_key_pairs);
S2N_API extern int s2n_config_set_verification_ca_location(struct s2n_config *config, const char *ca_pem_filename, const char *ca_dir);
S2N_API extern int s2n_config_add_pem_to_trust_store(struct s2n_config *config, const char *pem);
S2N_API extern int s2n_config_wipe_trust_store(struct s2n_config *config);
S2N_API extern int s2n_config_load_system_certs(struct s2n_config *config);
typedef enum {
    S2N_VERIFY_AFTER_SIGN_DISABLED,
    S2N_VERIFY_AFTER_SIGN_ENABLED
} s2n_verify_after_sign;
S2N_API extern int s2n_config_set_verify_after_sign(struct s2n_config *config, s2n_verify_after_sign mode);
S2N_API extern int s2n_config_set_send_buffer_size(struct s2n_config *config, uint32_t size);
S2N_API extern int s2n_config_set_recv_multi_record(struct s2n_config *config, bool enabled);
typedef uint8_t (*s2n_verify_host_fn)(const char *host_name, size_t host_name_len, void *data);
S2N_API extern int s2n_config_set_verify_host_callback(struct s2n_config *config, s2n_verify_host_fn, void *data);
S2N_API extern int s2n_connection_prefer_throughput(struct s2n_connection *conn);
S2N_API extern int s2n_connection_set_verify_host_callback(struct s2n_connection *conn, s2n_verify_host_fn host_fn, void *data);
S2N_API extern int s2n_set_server_name(struct s2n_connection *conn, const char *server_name);
typedef enum {
    S2N_NOT_BLOCKED = 0,
    S2N_BLOCKED_ON_READ,
    S2N_BLOCKED_ON_WRITE,
    S2N_BLOCKED_ON_APPLICATION_INPUT,
    S2N_BLOCKED_ON_EARLY_DATA,
} s2n_blocked_status;
S2N_API extern ssize_t s2n_recv(struct s2n_connection *conn, void *buf, ssize_t size, s2n_blocked_status *blocked);