crypto/s2n_certificate.h

struct s2n_cert_chain {
    uint32_t chain_size;
    struct s2n_cert *head;
};
struct s2n_cert_chain_and_key {
    struct s2n_cert_chain *cert_chain;
    s2n_cert_private_key *private_key;
    struct s2n_blob ocsp_status;
    struct s2n_blob sct_list;
    struct s2n_array *san_names;
    struct s2n_array *cn_names;
    void *context;
};